=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 2.007 - In Development

=over

=item *

Allow users whose page-size preference is 100, to be able to toggle
between 100 and 20, instead of 100 and 100. [Michael Peters]

=item *

Fixed redirect problem when going to the installation root already
logged in on a single installation machine (resulted in a 404).
[Michael Peters]

=item *

Entering F<publisher.pl> without any query params or a story in
the session will now redirect to the workspace instead of croak'ing.
[Michael Peters]

=item *

Fix issue in Krang::CGI::Story::db_save() changes to the slug or title
could get lost if the submission was invalid for other reasons.
[Michael Peters]

=item *

In Krang::CGI::Story::view(), use tmpl_var 'is_root' to inform
templates/Story/view.tmpl whether to show the 'Edit' button or not.
In templates/Story/view.tmpl, get rid of tmpl_var 'old_version'
which fails to show this button when returning from viewing a non-root
sub-element.  [Bodo Schulze]


=item *

In templates/Contrib/associate_list_view.tmpl, alert user if no
contributor has been checked to (un-)associate.  [Bodo Schulze]


=item *

SiteServer configuration now does server-side includes by default.
SSI is very common for sites managed by Krang.  This will make
development use of the SiteServer more useful and easier.
[Jesse Erlbaum]


=item *

Binary distributions now include src/ allowing for rebuilding
installed copies of Krang. [Sam]

=item *

Fixed several bin/ scripts to always load Krang::Conf via
Krang::ClassLoader before using it.  This fixes problems overriding
Krang::Conf in an addon.  [Sam]

=item *

Fixed bug in Krang::ElementClass::TopLevel error message.  [Jesse Erlbaum]


=item *

Fixed long-standing bug in Krang::ElementClass::ListGroup in which 
multi-dimensional sub lists would not update if you used the
keyboard (not the mouse) to update the selected item.  [Jesse Erlbaum]


=item *
